--- a/recife.html
+++ b/recife.html
@@ -2,82 +2,44 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Mooney, Waveforms - Recife to Ferguson</title>
+  <title>Recife to Ferguson - Transcript</title>
   <link rel="stylesheet" href="css/styles.css">
+  <style>
+    .return-button {
+      display: inline-block;
+      padding: 10px 20px;
+      background-color: orange;
+      color: #fff;
+      text-decoration: none;
+      border-radius: 8px;
+      font-weight: bold;
+      transition: background-color 0.3s ease;
+    }
+
+    .return-button:hover {
+      background-color: #ff7700;
+    }
+
+    .button-container {
+      margin: 20px 0;
+    }
+  </style>
 </head>
 <body>
   <header>
     <a href="index.html">
       <img src="media/images/banner-slim.jpg" alt="Waveforms Webtext Slim Banner" style="width:100%;">
     </a>
-    <nav>
-      <a href="index.html">
-        <img src="media/images/nav-intro.png" alt="Intro">
-      </a>
-
-      <div class="dropdown">
-        <span>
-          <img src="media/images/nav-theory.png" alt="Theoretical Conversations">
-        </span>
-        <div class="dropdown-content">
-          <a href="recife.html">Recife to Ferguson</a>
-          <a href="long-as-i-live.html">Long as I Live</a>
-        </div>
-      </div>
-
-      <div class="dropdown">
-        <span>
-          <img src="media/images/nav-methods.png" alt="Remixed Methods">
-        </span>
-        <div class="dropdown-content">
-          <a href="realm-of-entities.html">Realm of Entities</a>
-          <a href="poem-is-research.html">The Poem is the Research</a>
-        </div>
-      </div>
-
-      <div class="dropdown">
-        <span>
-          <img src="media/images/nav-praisesongs.png" alt="Praisesongs">
-        </span>
-        <div class="dropdown-content">
-          <a href="edsel-song.html">Edsel’s Song</a>
-          <a href="aaleah-song.html">Aaleah’s Song</a>
-          <a href="otto-song.html">Otto’s Song</a>
-          <a href="fatmata-song.html">Fatmata’s Song</a>
-        </div>
-      </div>
-
-      <a href="outro.html">
-        <img src="media/images/nav-outro.png" alt="Outro">
-      </a>
-
-      <a href="references.html">
-        <img src="media/images/nav-references.png" alt="References">
-      </a>
-
-      <a href="author.html">
-        <img src="media/images/nav-author.png" alt="Author">
-      </a>
-    </nav>
   </header>
 
   <main class="content-wrap">
-    <h1>Recife to Ferguson</h1>
-    <div class="audio-embed">
-  <iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay"
-    src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1180671574&color=%23431a50&auto_play=false&hide_related=true&show_comments=false&show_user=true&show_reposts=false&show_teaser=false">
-  </iframe>
-</div>
+    <h1>Recife to Ferguson - Accessible Transcript</h1>
 
-<p class="transcript-link">
-  <a href="#" onclick="document.getElementById('transcript-box').style.display='block'; return false;">Show Transcript</a> |
-  <a href="recife-transcript.html">Accessible Plain Text Transcript</a>
-</p>
+    <div class="button-container">
+      <a href="recife.html" class="return-button">← Return</a>
+    </div>
 
-<div id="transcript-box" class="transcript-box" style="display: none;">
-  <p><a href="#" onclick="document.getElementById('transcript-box').style.display='none'; return false;">Hide Transcript</a></p>
-  <div class="transcript-scroll" style="overflow-y: scroll; max-height: 400px; border: 1px solid #ccc; padding: 10px; background-color: #f9f9f9;">
-    <pre style="white-space: pre-wrap; font-family: sans-serif;">
+    <pre style="white-space: pre-wrap; font-family: sans-serif; background-color: #f9f9f9; padding: 10px; border: 1px solid #ccc;">
 [GCS] Paulo Freire, the Brazilian educator        
 and philosopher was born in Recife, where 
 we are right now. 
@@ -185,41 +147,14 @@ My curiosity never stop.
 [HH] - Henry Giroux
 [PM] - Peter McLaren
     </pre>
-  </div>
-</div>
 
-    <h2>Sampling Critical Pedagogy Through Sonic Praxis</h2>
-
-<p class="center-text"><<em>conscientização</em> – Portuguese, meaning <em>critical consciousness</em></p>
-
-<p>When I first read <em>Pedagogy of the Oppressed</em> (1970), it changed me. Paulo Freire’s words gave me a language to name the world I was witnessing—systemic racism, settler colonialism, hyper-capitalism – and what bell hooks calls imperialist white-supremacist capitalist patriarchy. Freire helped me see how oppression dehumanizes everyone, including those who benefit from it. That insight called me more deeply into the work of liberation: as a teacher, poet, and educational researcher. It also affirmed a truth I was just beginning to understand—that education is inherently political and deeply connected to our “ontological vocation to be more fully human” (p. 70).</p>
-
-<p>Freire’s concept of <em>radical love</em>, rooted in Catholic liberation theology (Gutiérrez, 1973), became a pedagogical ethos for me. With that grounding, I felt compelled to sample critical pedagogy, and remix it through the aesthetics and sensibilities of Hip Hop, a culture that influenced so much of my life as I grew up outside New York City. I didn’t arrive at Freire through my academic journey as a graduate student. I came to critical pedagogy through Hip Hop. My first encounter with Freire was at Hip Hop in the Heartland, a summer teacher conference in Wisconsin, where a theater educator facilitated a <em>Theater of the Oppressed</em> (Boal, 1979) workshop. That experience inspired me to read as many critical theorists as possible, including scholars and public intellectuals like Henry Giroux, Peter McLaren, Shirley Steinberg, Ana Cruz, and Joe Kincheloe – all of whom are sampled here. These scholars helped shape my identity as a public-school teacher committed to education as a form of liberation.</p>
-
-<p>Paulo Freire and Donaldo Macedo (1987) insisted that “reading the world always precedes reading the word, and reading the word implies continually reading the world” (p. 23). When my students and I analyzed songs and poems like “The Message” (Grandmaster Flash), “U.N.I.T.Y.” (Queen Latifah), or “List of Demands” (Saul Williams), we engaged in complex readings of the world that offered social commentary delivered through the poetics of the breakbeat (Coval et al., 2015). Inspired by Nuyorican poetry slam traditions (Algarín &amp; Holman, 1994), we analyzed these texts, but also became critical producers of new texts as students composed their own performance poems for the stage. Our classroom became a site of participatory and performative literacy development that cultivated critical consciousness. It became a site of what Antwi Akom (2009) called Critical Hip Hop Pedagogy.</p>
-
-<p>This track, "Recife to Ferguson,” is my homage to Freire. I wanted to bring his voice into direct conversation with the sonic aesthetics of Hip Hop, situating him (literally and metaphorically) in dialogue with other critical scholars, protest chants, and contemporary global events. In the track, you’ll hear samples from #BlackLivesMatter protests, the Dakota Access Pipeline resistance, and media coverage of the COVID-19 pandemic. You’ll also hear the voices of critical theorists layered over breakbeats and samba rhythms.</p>
-
-<p>The music draws on a Brazilian palette of sounds and textures as a way to honor Freire’s homeland. I made the beat using samba-influenced percussion and a lead melody sampled from a cavaquinho–a small, four-string instrument originating in Portugal. The hook features chopped up vocals from a Brazilian folksinger, reconfigured into a new musical sentence. These aesthetic choices are part of an intentional sonic methodology, a transnational homage, and an affirmation of Hip Hop’s Afro-diasporic lineage.</p>
-
-<p class="center-text">The production itself was a praxis for me—<br>
-a praxis of critical music production /<br>
-a sonic Hip Hop praxis /<br>
-reminding me always to...</p>
-
-<p class="center-text"><em>“Reflect, act, and change what is not working.”<br>
-—Ana Cruz</em></p>
-
-  <div class="track-nav">
-  <a href="index.html" class="track-button prev">&#8592; PREVIOUS TRACK</a>
-  <a href="long-as-i-live.html" class="track-button next">NEXT TRACK &#8594;</a>
-</div>
-
+    <div class="button-container">
+      <a href="recife.html" class="return-button">← Return</a>
+    </div>
   </main>
 
   <footer>
     <p>&copy; 2025 Brian Mooney</p>
   </footer>
-
 </body>
 </html>
