--- a/index.html
+++ b/index.html
@@ -131,7 +131,9 @@
 </div>
 
 <div class="track-nav">
-  <a href="recife.html" class="track-button">NEXT TRACK &#8594;</a>
+  <a href="recife.html">
+  <img src="media/images/next-button.svg" alt="Next Track" class="track-image-button">
+</a>
 </div>
  
   </main>
