--- a/recife.html
+++ b/recife.html
@@ -211,8 +211,14 @@ reminding me always to...</p>
 —Ana Cruz</em></p>
 
   <div class="track-nav">
-  <a href="index.html" class="track-button prev">&#8592; PREVIOUS TRACK</a>
-  <a href="long-as-i-live.html" class="track-button next">NEXT TRACK &#8594;</a>
+  <a href="index.html">
+  <img src="media/images/previous-button.svg" alt="Previous Track" class="track-image-button">
+</a>
+
+<a href="long-as-i-live.html">
+  <img src="media/images/next-button.svg" alt="Next Track" class="track-image-button">
+</a>
+
 </div>
 
   </main>
