--- a/long-as-i-live.html
+++ b/long-as-i-live.html
@@ -159,8 +159,14 @@ electronic.
     <p>Coming soon: Content for this page will explore the themes of Long as I Live in the context of waveform, memory, and pedagogy.</p>
   
     <div class="track-nav">
-  <a href="recife.html" class="track-button prev">&#8592; PREVIOUS TRACK</a>
-  <a href="realm-of-entities.html" class="track-button next">NEXT TRACK &#8594;</a>
+  <a href="recife.html">
+  <img src="media/images/previous-button.svg" alt="Previous Track" class="track-image-button">
+</a>
+
+<a href="realm-of-entities.html">
+  <img src="media/images/next-button.svg" alt="Next Track" class="track-image-button">
+</a>
+
 </div>
   
   </main>
