--- a/realm-of-entities.html
+++ b/realm-of-entities.html
@@ -201,8 +201,14 @@ Music fades
     <p>Coming soon: Content for this page will explore the concept of entities as part of remixed methods in waveform pedagogy.</p>
  
   <div class="track-nav">
-  <a href="long-as-i-live.html" class="track-button prev">&#8592; PREVIOUS TRACK</a>
-  <a href="poem-is-research.html" class="track-button next">NEXT TRACK &#8594;</a>
+  <a href="long-as-i-live.html">
+  <img src="media/images/previous-button.svg" alt="Previous Track" class="track-image-button">
+</a>
+
+<a href="poem-is-research.html">
+  <img src="media/images/next-button.svg" alt="Next Track" class="track-image-button">
+</a>
+
 </div>
 	  
   </main>
