--- a/poem-is-research.html
+++ b/poem-is-research.html
@@ -170,8 +170,14 @@ undress for anyone other than itself
     <p>Coming soon: Content for this page will explore how poetic form and method function as research in waveform pedagogy.</p>
   
   <div class="track-nav">
-  <a href="realm-of-entities.html" class="track-button prev">&#8592; PREVIOUS TRACK</a>
-  <a href="edsel-song.html" class="track-button next">NEXT TRACK &#8594;</a>
+  <a href="realm-of-entities.html">
+  <img src="media/images/previous-button.svg" alt="Previous Track" class="track-image-button">
+</a>
+
+<a href="edsel-song.html">
+  <img src="media/images/next-button.svg" alt="Next Track" class="track-image-button">
+</a>
+
 </div>
     
   </main>
