--- a/edsel-song.html
+++ b/edsel-song.html
@@ -271,8 +271,14 @@ we’re all one right now
     <p>Coming soon: Content for this page will explore Edsel’s contributions, narrative, and sonic imprint within the Waveforms project.</p>
   
   <div class="track-nav">
-  <a href="poem-is-research.html" class="track-button prev">&#8592; PREVIOUS TRACK</a>
-  <a href="aaleah-song.html" class="track-button next">NEXT TRACK &#8594;</a>
+  <a href="poem-is-research.html">
+  <img src="media/images/previous-button.svg" alt="Previous Track" class="track-image-button">
+</a>
+
+<a href="aaleah-song.html">
+  <img src="media/images/next-button.svg" alt="Next Track" class="track-image-button">
+</a>
+
 </div>
 
   </main>
