--- a/aaleah-song.html
+++ b/aaleah-song.html
@@ -249,8 +249,14 @@ spiritual space
     <p>Coming soon: Content for this page will explore Aaleah’s voice, story, and sonic contribution to the Waveforms project.</p>
   
   <div class="track-nav">
-  <a href="edsel-song.html" class="track-button prev">&#8592; PREVIOUS TRACK</a>
-  <a href="otto-song.html" class="track-button next">NEXT TRACK &#8594;</a>
+  <a href="edsel-song.html">
+  <img src="media/images/previous-button.svg" alt="Previous Track" class="track-image-button">
+</a>
+
+<a href="otto-song.html">
+  <img src="media/images/next-button.svg" alt="Next Track" class="track-image-button">
+</a>
+
 </div>
     
   </main>
