--- a/otto-song.html
+++ b/otto-song.html
@@ -242,8 +242,14 @@ so thank you from the bottom of my heart
     <p>Coming soon: Content for this page will explore Otto’s narrative and sonic presence within the Waveforms project.</p>
  
   <div class="track-nav">
-  <a href="aaleah-song.html" class="track-button prev">&#8592; PREVIOUS TRACK</a>
-  <a href="fatmata-song.html" class="track-button next">NEXT TRACK &#8594;</a>
+  <a href="aaleah-song.html">
+  <img src="media/images/previous-button.svg" alt="Previous Track" class="track-image-button">
+</a>
+
+<a href="fatmata-song.html">
+  <img src="media/images/next-button.svg" alt="Next Track" class="track-image-button">
+</a>
+
 </div>
     
   </main>
