--- a/fatmata-song.html
+++ b/fatmata-song.html
@@ -294,9 +294,15 @@ I was just like, wow we did something really incredible
 
     <p>Content coming soon...</p>
   
-  <div class="track-nav">
-  <a href="otto-song.html" class="track-button prev">&#8592; PREVIOUS TRACK</a>
-  <a href="outro.html" class="track-button next">NEXT TRACK &#8594;</a>
+ <div class="track-nav">
+  <a href="otto-song.html">
+  <img src="media/images/previous-button.svg" alt="Previous Track" class="track-image-button">
+</a>
+
+<a href="outro.html">
+  <img src="media/images/next-button.svg" alt="Next Track" class="track-image-button">
+</a>
+
 </div>
 
   </main>
