--- a/outro.html
+++ b/outro.html
@@ -184,6 +184,14 @@ we have done together
 </div>
 
     <p>Content coming soon...</p>
+
+<div class="track-nav">
+  <a href="fatmata-song.html">
+  <img src="media/images/previous-button.svg" alt="Previous Track" class="track-image-button">
+</a>
+
+</div>
+    
   </main>
   <footer>
     <p>&copy; 2025 Brian Mooney</p>
