--- a/outro.html
+++ b/outro.html
@@ -184,12 +184,17 @@ we have done together
 </div>
 
     <p>Content coming soon...</p>
-
+    
 <div class="track-nav">
   <a href="fatmata-song.html">
-  <img src="media/images/previous-button.svg" alt="Previous Track" class="track-image-button">
-</a>
+    <img src="media/images/previous-button.svg" alt="Last Track" class="track-image-button">
+  </a>
+</div>
 
+<div class="center-rewind">
+  <a href="index.html">
+    <img src="media/images/rewind-button.svg" alt="Rewind Tape to Intro" class="track-image-button">
+  </a>
 </div>
     
   </main>
