--- a/outro.html
+++ b/outro.html
@@ -185,10 +185,13 @@ we have done together
 
     <p>Content coming soon...</p>
     
-<div class="track-nav-flex">
+<div class="track-nav">
   <a href="fatmata-song.html">
     <img src="media/images/previous-button.svg" alt="Last Track" class="track-image-button">
   </a>
+</div>
+
+<div class="center-rewind">
   <a href="index.html">
     <img src="media/images/rewind-button.svg" alt="Rewind Tape to Intro" class="track-image-button">
   </a>
