--- a/outro.html
+++ b/outro.html
@@ -185,14 +185,11 @@ we have done together
 
     <p>Content coming soon...</p>
     
-<div class="track-nav">
-  <a href="fatmata-song.html">
+<div class="track-nav-inline">
+  <a href="fatmata-song.html" class="left-button">
     <img src="media/images/previous-button.svg" alt="Last Track" class="track-image-button">
   </a>
-</div>
-
-<div class="center-rewind">
-  <a href="index.html">
+  <a href="index.html" class="rewind-button-wrap">
     <img src="media/images/rewind-button.svg" alt="Rewind Tape to Intro" class="track-image-button">
   </a>
 </div>
