--- a/outro.html
+++ b/outro.html
@@ -185,14 +185,22 @@ we have done together
 
     <p>Content coming soon...</p>
     
-<div class="track-nav-inline">
-  <a href="fatmata-song.html" class="left-button">
-    <img src="media/images/previous-button.svg" alt="Last Track" class="track-image-button">
-  </a>
-  <a href="index.html" class="rewind-button-wrap">
-    <img src="media/images/rewind-button.svg" alt="Rewind Tape to Intro" class="track-image-button">
-  </a>
+<div class="track-nav-balanced">
+  <div class="nav-slot left">
+    <a href="fatmata-song.html">
+      <img src="media/images/previous-button.svg" alt="Last Track" class="track-image-button">
+    </a>
+  </div>
+  <div class="nav-slot center">
+    <a href="index.html">
+      <img src="media/images/rewind-button.svg" alt="Rewind Tape to Intro" class="track-image-button">
+    </a>
+  </div>
+  <div class="nav-slot right">
+    
+  </div>
 </div>
+
 
   </main>
   <footer>
