--- a/index.html
+++ b/index.html
@@ -6,12 +6,13 @@
   <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-  <header>
-    <a href="index.html">
-      <img src="media/images/banner.jpg" alt="Waveforms webtext banner" class="banner-image">
-    </a>
-    <nav>
+  <div class="content-wrap">
+    <header>
       <a href="index.html">
+        <img src="media/images/banner.jpg" alt="Waveforms webtext banner" class="banner-image">
+      </a>
+      <nav>
+         <a href="index.html">
         <img src="media/images/nav-intro.png" alt="Intro">
       </a>
       <div class="dropdown">
@@ -48,6 +49,8 @@
       </a>
     </nav>
   </header>
+  </div>
+
   <main class="content-wrap">
     <h1>Intro</h1>
 
