--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-  <div class="content-wrap">
-    <header>
+  <header>
+    <div class="header-inner">
       <a href="index.html">
         <img src="media/images/banner.jpg" alt="Waveforms webtext banner" class="banner-image">
       </a>
@@ -48,8 +48,8 @@
         <img src="media/images/nav-author.png" alt="Author">
       </a>
     </nav>
+    </div>
   </header>
-  </div>
 
   <main class="content-wrap">
     <h1>Intro</h1>
