--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
 </head>
 <body>
  <header>
-  <div class="header-inner">
-    <a href="index.html">
-      <img src="media/images/banner.jpg" alt="Waveforms webtext banner" class="banner-image">
-    </a>
+  <a href="index.html">
+    <img src="media/images/banner.jpg" alt="Waveforms webtext banner" class="banner-image">
+  </a>
+  <div class="nav-inner">
     <nav>
       <a href="index.html">
         <img src="media/images/nav-intro.png" alt="Intro">
