--- a/realm-of-entities.html
+++ b/realm-of-entities.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Mooney, Waveforms - Realm of Entities</title>
+  <title>Realm of Entities - Accessible Transcript</title>
   <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
@@ -10,74 +10,14 @@
     <a href="index.html">
       <img src="media/images/banner-slim.jpg" alt="Waveforms Webtext Slim Banner" style="width:100%;">
     </a>
-    <nav>
-      <a href="index.html">
-        <img src="media/images/nav-intro.png" alt="Intro">
-      </a>
-
-      <div class="dropdown">
-        <span>
-          <img src="media/images/nav-theory.png" alt="Theoretical Conversations">
-        </span>
-        <div class="dropdown-content">
-          <a href="recife.html">Recife to Ferguson</a>
-          <a href="long-as-i-live.html">Long as I Live</a>
-        </div>
-      </div>
-
-      <div class="dropdown">
-        <span>
-          <img src="media/images/nav-methods.png" alt="Remixed Methods">
-        </span>
-        <div class="dropdown-content">
-          <a href="realm-of-entities.html">Realm of Entities</a>
-          <a href="poem-is-research.html">The Poem is the Research</a>
-        </div>
-      </div>
-
-      <div class="dropdown">
-        <span>
-          <img src="media/images/nav-praisesongs.png" alt="Praisesongs">
-        </span>
-        <div class="dropdown-content">
-          <a href="edsel-song.html">Edsel’s Song</a>
-          <a href="aaleah-song.html">Aaleah’s Song</a>
-          <a href="otto-song.html">Otto’s Song</a>
-          <a href="fatmata-song.html">Fatmata’s Song</a>
-        </div>
-      </div>
-
-      <a href="outro.html">
-        <img src="media/images/nav-outro.png" alt="Outro">
-      </a>
-
-      <a href="references.html">
-        <img src="media/images/nav-references.png" alt="References">
-      </a>
-
-      <a href="author.html">
-        <img src="media/images/nav-author.png" alt="Author">
-      </a>
-    </nav>
   </header>
 
   <main class="content-wrap">
-    <h1>Realm of Entities</h1>
-    <div class="audio-embed">
-  <iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay"
-    src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1194633484&color=%23431a50&auto_play=false&hide_related=true&show_comments=false&show_user=true&show_reposts=false&show_teaser=false">
-  </iframe>
-</div>
+    <h1>Realm of Entities - Accessible Transcript</h1>
 
-<p class="transcript-link">
-  <a href="#" onclick="document.getElementById('transcript-box').style.display='block'; return false;">Show Transcript</a> |
-  <a href="realm-of-entities-transcript.html">Accessible Plain Text Transcript</a>
-</p>
+    <p><a href="realm-of-entities.html" class="back-button">← Return</a></p>
 
-<div id="transcript-box" class="transcript-box" style="display: none;">
-  <p><a href="#" onclick="document.getElementById('transcript-box').style.display='none'; return false;">Hide Transcript</a></p>
-  <div class="transcript-scroll" style="overflow-y: scroll; max-height: 400px; border: 1px solid #ccc; padding: 10px; background-color: #f9f9f9;">
-  <pre style="white-space: pre-wrap; font-family: sans-serif;">
+    <pre style="white-space: pre-wrap; font-family: sans-serif; background-color: #f9f9f9; padding: 10px; border: 1px solid #ccc;">
 [KF] Remix: to combine 
 or edit existing materials
 to produce something new. 
@@ -193,27 +133,12 @@ Music fades
 [AB] - Anne Burdick
 [DG] - David Gunkel
 [PDM] - Paul D. Miller
-  </pre>
-</div>
+    </pre>
 
-</div>
-
-    <p>Coming soon: Content for this page will explore the concept of entities as part of remixed methods in waveform pedagogy.</p>
- 
-  <div class="track-nav">
-  <a href="long-as-i-live.html">
-  <img src="media/images/previous-button.svg" alt="Previous Track" class="track-image-button">
-</a>
-
-<a href="poem-is-research.html">
-  <img src="media/images/next-button.svg" alt="Next Track" class="track-image-button">
-</a>
-
-</div>
-	  
+    <p><a href="realm-of-entities.html" class="back-button">← Return</a></p>
   </main>
 
-   <footer>
+  <footer>
     <p>&copy; 2025 Brian Mooney</p>
   </footer>
 </body>
