--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
+  <a href="#main" class="skip-link">Skip to main content</a>
  <header>
   <a href="index.html">
     <img src="media/images/banner.jpg" alt="Waveforms webtext banner" class="banner-image">
@@ -51,7 +52,7 @@
   </div>
 </header>
 
-  <main class="content-wrap">
+  <main id="main" class="content-wrap">
     <h1>Intro</h1>
 
     <div class="audio-embed">
