--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-  <a href="#main" class="skip-link">Skip to main content</a>
+  <a href="#main" class="skip-link" tabindex="0">Skip to main content</a>
  <header>
   <a href="index.html">
     <img src="media/images/banner.jpg" alt="Waveforms webtext banner" class="banner-image">
