--- a/author.html
+++ b/author.html
@@ -6,6 +6,7 @@
   <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
+<a href="#main" class="skip-link" tabindex="0">Skip to main content</a>
   <header>
     <a href="index.html">
       <img src="media/images/banner-slim.jpg" alt="Waveforms Webtext Slim Banner" style="width:100%;">
@@ -61,7 +62,7 @@
     </nav>
   </header>
 
-  <main class="content-wrap">
+  <main id="main" class="content-wrap">
     <h1>Author</h1>
     <p>Dr. Brian Mooney is a teacher-educator, scholar, multimedia artist, and author from New Jersey, USA. He is currently an Assistant Professor of Literacy Education at Fairleigh Dickinson University. His research explores the intersections of language, literacy, and popular culture, with a focus on critical Hip Hop and spoken word literacies.</p>
 
