--- a/fatmata-song.html
+++ b/fatmata-song.html
@@ -6,6 +6,7 @@
   <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
+  <a href="#main" class="skip-link" tabindex="0">Skip to main content</a>
   <header>
     <a href="index.html">
       <img src="media/images/banner-slim.jpg" alt="Waveforms Webtext Slim Banner" style="width:100%;">
@@ -61,7 +62,7 @@
     </nav>
   </header>
 
-  <main class="content-wrap">
+  <main id="main" class="content-wrap">
     <h1>Fatmata’s Song</h1>
    <div class="audio-embed">
   <iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay"
