--- a/references.html
+++ b/references.html
@@ -6,6 +6,7 @@
   <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
+  <a href="#main" class="skip-link" tabindex="0">Skip to main content</a>
   <header>
     <a href="index.html">
       <img src="media/images/banner-slim.jpg" alt="Waveforms Webtext Slim Banner" style="width:100%;">
@@ -61,7 +62,7 @@
     </nav>
   </header>
 
-  <main class="content-wrap">
+  <main id="main" class="content-wrap">
     <h1>References</h1>
 
  <p>Akom, Antwi A. (2009). <em>Critical hip hop pedagogy as a form of liberatory praxis.</em> Equity and Excellence in Education, 42(1), 52–66. <a href="https://doi.org/10.1080/10665680802612519" target="_blank">https://doi.org/10.1080/10665680802612519</a></p>
