--- a/index.html
+++ b/index.html
@@ -55,11 +55,15 @@
   <main id="main" class="content-wrap">
     <h1>Intro</h1>
 
+  <a href="#after-audio" class="skip-link" tabindex="0">Skip audio player</a>
+
     <div class="audio-embed">
       <iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay"
         src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1185861439&color=%23431a50&auto_play=false&hide_related=true&show_comments=false&show_user=true&show_reposts=false&show_teaser=false">
       </iframe>
     </div>
+
+  <div id="after-audio"></div>
 
     <p class="transcript-link">
       <a href="#" onclick="document.getElementById('transcript-box').style.display='block'; return false;">Show Transcript</a> |
