--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
 
     <div class="audio-embed">
       <iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay"
+        title="Audio player for Intro track"
         src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1185861439&color=%23431a50&auto_play=false&hide_related=true&show_comments=false&show_user=true&show_reposts=false&show_teaser=false">
       </iframe>
     </div>
@@ -130,6 +131,7 @@
 
 <div class="audio-embed">
   <iframe width="100%" height="450" scrolling="no" frameborder="no" allow="autoplay"
+    title="Audio playlist for entire mixtape"
     src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/2026819329&color=%23431a50&auto_play=false&hide_related=true&show_comments=false&show_user=false&show_reposts=false&show_teaser=false">
   </iframe>
 </div>
