--- a/outro.html
+++ b/outro.html
@@ -66,6 +66,7 @@
     <h1>Outro</h1>
     <div class="audio-embed">
   <iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay"
+    title="Audio player for Outro"
     src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1284418753&color=%23431a50&auto_play=false&hide_related=true&show_comments=false&show_user=true&show_reposts=false&show_teaser=false">
   </iframe>
 </div>
