--- a/index.html
+++ b/index.html
@@ -72,10 +72,17 @@
 <script>
 function toggleTranscript(btn) {
   const box = document.getElementById('transcript-box');
-  const isHidden = box.style.display === 'none' || box.style.display === '';
-  box.style.display = isHidden ? 'block' : 'none';
-  btn.setAttribute('aria-expanded', isHidden);
-  btn.textContent = isHidden ? 'Hide Transcript' : 'Show Transcript';
+  const isCurrentlyVisible = box.style.display === 'block';
+
+  if (isCurrentlyVisible) {
+    box.style.display = 'none';
+    btn.textContent = 'Show Transcript';
+    btn.setAttribute('aria-expanded', 'false');
+  } else {
+    box.style.display = 'block';
+    btn.textContent = 'Hide Transcript';
+    btn.setAttribute('aria-expanded', 'true');
+  }
 }
 </script>
 
