--- a/index.html
+++ b/index.html
@@ -69,6 +69,28 @@
   <a href="intro-transcript.html">Accessible Plain Text Transcript</a>
 </p>
 
+<p class="transcript-link">
+  <button type="button" class="transcript-toggle" aria-expanded="false" onclick="toggleTranscript(this)">
+    Show Transcript
+  </button> |
+  <a href="intro-transcript.html">Accessible Plain Text Transcript</a>
+</p>
+
+<div id="transcript-box" class="transcript-box" style="display: none;">
+  <p>
+    <a href="#" onclick="hideTranscriptFromInner(); return false;">Hide Transcript</a>
+  </p>
+  <div class="transcript-scroll">
+    <p><strong>Intro: Words by Common</strong></p>
+    <p>we about to have<br>
+    an incredible experience</p>
+    <p>of art / love / poetry /<br>
+    emceeing / freedom / expression</p>
+    <p>Are y’all ready?<br>
+    I said, are y’all ready?</p>
+  </div>
+</div>
+
 <script>
 function toggleTranscript(btn) {
   const box = document.getElementById('transcript-box');
@@ -96,7 +118,6 @@ function hideTranscriptFromInner() {
   }
 }
 </script>
-
 
     <div id="transcript-box" class="transcript-box" style="display: none;">
       <p><a href="#" onclick="document.getElementById('transcript-box').style.display='none'; return false;">Hide Transcript</a></p>
