--- a/recife.html
+++ b/recife.html
@@ -79,7 +79,7 @@
 </p>
 
 <div id="transcript-box" class="transcript-box" style="display: none;">
-  <<p><a href="#" onclick="hideTranscriptFromInner(); return false;">Hide Transcript</a></p>
+  <p><a href="#" onclick="hideTranscriptFromInner(); return false;">Hide Transcript</a></p>
   <div class="transcript-scroll" style="overflow-y: scroll; max-height: 400px; border: 1px solid #ccc; padding: 10px; background-color: #f9f9f9;">
     <pre style="white-space: pre-wrap; font-family: sans-serif;">
 [GCS] Paulo Freire, the Brazilian educator        
