--- a/fatmata-song.html
+++ b/fatmata-song.html
@@ -79,7 +79,7 @@
 </p>
 
 <div id="transcript-box" class="transcript-box" style="display: none;">
-  <p><a href="#" onclick="document.getElementById('transcript-box').style.display='none'; return false;">Hide Transcript</a></p>
+  <p><a href="#" onclick="hideTranscriptFromInner(); return false;">Hide Transcript</a></p>
   <div class="transcript-scroll" style="overflow-y: scroll; max-height: 400px; border: 1px solid #ccc; padding: 10px; background-color: #f9f9f9;">
   <pre style="white-space: pre-wrap; font-family: sans-serif;">
 [voice] at some point
@@ -314,5 +314,34 @@ I was just like, wow we did something really incredible
   <footer>
     <p>&copy; 2025 Brian Mooney</p>
   </footer>
+
+<script>
+function toggleTranscript(btn) {
+  const box = document.getElementById('transcript-box');
+  const isCurrentlyVisible = box.style.display === 'block';
+
+  if (isCurrentlyVisible) {
+    box.style.display = 'none';
+    btn.textContent = 'Show Transcript';
+    btn.setAttribute('aria-expanded', 'false');
+  } else {
+    box.style.display = 'block';
+    btn.textContent = 'Hide Transcript';
+    btn.setAttribute('aria-expanded', 'true');
+  }
+}
+
+function hideTranscriptFromInner() {
+  const box = document.getElementById('transcript-box');
+  const btn = document.querySelector('.transcript-toggle');
+
+  box.style.display = 'none';
+  if (btn) {
+    btn.textContent = 'Show Transcript';
+    btn.setAttribute('aria-expanded', 'false');
+  }
+}
+</script>
+
 </body>
 </html>
