--- a/outro.html
+++ b/outro.html
@@ -75,7 +75,7 @@
   <button type="button" class="transcript-toggle" aria-expanded="false" onclick="toggleTranscript(this)">
     Show Transcript
   </button> |
-  <a href="SOMEPAGE-transcript.html">Accessible Plain Text Transcript</a>
+  <a href="outro-transcript.html">Accessible Plain Text Transcript</a>
 </p>
 
 <div id="transcript-box" class="transcript-box" style="display: none;">
