--- a/realm-of-entities.html
+++ b/realm-of-entities.html
@@ -72,12 +72,14 @@
 </div>
 
 <p class="transcript-link">
-  <a href="#" onclick="document.getElementById('transcript-box').style.display='block'; return false;">Show Transcript</a> |
+  <button type="button" class="transcript-toggle" aria-expanded="false" onclick="toggleTranscript(this)">
+    Show Transcript
+  </button> |
   <a href="realm-of-entities-transcript.html">Accessible Plain Text Transcript</a>
 </p>
 
 <div id="transcript-box" class="transcript-box" style="display: none;">
-  <p><a href="#" onclick="document.getElementById('transcript-box').style.display='none'; return false;">Hide Transcript</a></p>
+  <p><a href="#" onclick="hideTranscriptFromInner(); return false;">Hide Transcript</a></p>
   <div class="transcript-scroll" style="overflow-y: scroll; max-height: 400px; border: 1px solid #ccc; padding: 10px; background-color: #f9f9f9;">
   <pre style="white-space: pre-wrap; font-family: sans-serif;">
 [KF] Remix: to combine 
@@ -218,5 +220,34 @@ Music fades
    <footer>
     <p>&copy; 2025 Brian Mooney</p>
   </footer>
+
+<script>
+function toggleTranscript(btn) {
+  const box = document.getElementById('transcript-box');
+  const isCurrentlyVisible = box.style.display === 'block';
+
+  if (isCurrentlyVisible) {
+    box.style.display = 'none';
+    btn.textContent = 'Show Transcript';
+    btn.setAttribute('aria-expanded', 'false');
+  } else {
+    box.style.display = 'block';
+    btn.textContent = 'Hide Transcript';
+    btn.setAttribute('aria-expanded', 'true');
+  }
+}
+
+function hideTranscriptFromInner() {
+  const box = document.getElementById('transcript-box');
+  const btn = document.querySelector('.transcript-toggle');
+
+  box.style.display = 'none';
+  if (btn) {
+    btn.textContent = 'Show Transcript';
+    btn.setAttribute('aria-expanded', 'false');
+  }
+}
+</script>
+
 </body>
 </html>
