--- a/edsel-song.html
+++ b/edsel-song.html
@@ -62,14 +62,14 @@
     </nav>
   </header>
 
-  <main id="main" class="content-wrap">
-    <h1>Edsel’s Song</h1>
-    <div class="audio-embed">
-  <iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay"
-    title="Audio player for Edsel's Song"
-    src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1221329218&color=%23431a50&auto_play=false&hide_related=true&show_comments=false&show_user=true&show_reposts=false&show_teaser=false">
-  </iframe>
-</div>
+ <main id="main" class="content-wrap">
+  <h1>Edsel’s Song</h1>
+  <div class="audio-embed">
+    <iframe class="responsive-iframe" height="166" allow="autoplay"
+      title="Audio player for Edsel's Song"
+      src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1221329218&color=%23431a50&auto_play=false&hide_related=true&show_comments=false&show_user=true&show_reposts=false&show_teaser=false">
+    </iframe>
+  </div>
 
 <p class="transcript-link">
   <button type="button" class="transcript-toggle" aria-expanded="false" onclick="toggleTranscript(this)">
