--- a/fatmata-song.html
+++ b/fatmata-song.html
@@ -63,13 +63,13 @@
   </header>
 
   <main id="main" class="content-wrap">
-    <h1>Fatmata’s Song</h1>
-   <div class="audio-embed">
-  <iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay"
-    title="Audio player for Fatmata's Song"
-    src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1273888957&color=%23431a50&auto_play=false&hide_related=true&show_comments=false&show_user=true&show_reposts=false&show_teaser=false">
-  </iframe>
-</div>
+  <h1>Fatmata’s Song</h1>
+  <div class="audio-embed">
+    <iframe class="responsive-iframe" height="166" allow="autoplay"
+      title="Audio player for Fatmata's Song"
+      src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1273888957&color=%23431a50&auto_play=false&hide_related=true&show_comments=false&show_user=true&show_reposts=false&show_teaser=false">
+    </iframe>
+  </div>
 
 <p class="transcript-link">
   <button type="button" class="transcript-toggle" aria-expanded="false" onclick="toggleTranscript(this)">
