--- a/index.html
+++ b/index.html
@@ -161,12 +161,10 @@ function hideTranscriptFromInner() {
 
 <p><em>Each track of the mixtape is embedded on its respective menu page. For an audio-only listening experience, the audio compositions are assembled as a playlist on Soundcloud below.</em></p> 
 
-<div class="audio-embed">
-  <iframe width="100%" height="450" scrolling="no" frameborder="no" allow="autoplay"
-    title="Audio playlist for entire mixtape"
-    src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/2026819329&color=%23431a50&auto_play=false&hide_related=true&show_comments=false&show_user=false&show_reposts=false&show_teaser=false">
-  </iframe>
-</div>
+<iframe class="responsive-iframe" height="450" allow="autoplay"
+  title="Audio playlist for entire mixtape"
+  src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/2026819329&color=%23431a50&auto_play=false&hide_related=true&show_comments=false&show_user=false&show_reposts=false&show_teaser=false">
+</iframe>
 
 <div class="track-nav">
   <a href="recife.html">
