--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@ function hideTranscriptFromInner() {
     <p>I come to this work as a poet, DJ, and beatmaker who attends to the complexities of sound. For me, sound is a way of knowing and composing. Sound work offers methods of unflattening (Sousanis, 2015) traditional research and in this study includes the intentional uses of spoken language, field recordings, and musical samples. Sonic compositions require embodied sensibilities in which rhythms, loops, frequencies, and fragments of sound are remixed into new configurations. All of the music and poetry in this webtext are original. I produced the album using a digital audio workstation (DAW) called Ableton Live (see Figure 1).</p>
 
      <figure class="figure-1">
-  <img src="media/images/figure1.png" alt="Session View in Ableton Live showing thematically color-coded clips representing audio excerpts from interviews, focus groups, and participant poems used in the composition process.">
+  <img src="media/images/figure1.png" alt="">
   <figcaption>Figure 1: Session View in Ableton Live showing thematically color-coded clips representing audio excerpts from interviews, focus groups, and participant poems used in the composition process.</figcaption>
 </figure>
 
@@ -134,7 +134,7 @@ function hideTranscriptFromInner() {
 
     <div style="clear: both;"></div>
     <figure class="figure-2">
-  <img src="media/images/figure2.png" alt="Waveform of the Amen Break, the iconic six-second drum loop from The Winstons' 1969 track 'Amen, Brother.' Widely sampled in Hip Hop, jungle, and electronic music, this breakbeat exemplifies how sound fragments become part of the collective sonic archive through continuous reuse, remix, and reinvention.">
+  <img src="media/images/figure2.png" alt="">
   <figcaption>Figure 2: Waveform of the Amen Break, the iconic six-second drum loop from The Winstons' 1969 track 'Amen, Brother.' Widely sampled in Hip Hop, jungle, and electronic music, this breakbeat exemplifies how sound fragments become part of the collective sonic archive through continuous reuse, remix, and reinvention.</figcaption>
 </figure>
 
