--- a/index.html
+++ b/index.html
@@ -144,9 +144,11 @@ function hideTranscriptFromInner() {
 
 <p>These are the research questions that framed my dissertation study:</p>
 
-<p class="indent">1. What happens when young people narrativize their experiences for a poetry slam?</p>
-<p class="indent">2. How do we re-member the youth poetry slam?</p> 
-<p class="indent">3. What kinds of critical Hip Hop literacies are practiced in the youth poetry slam?</p>
+<ol>
+  <li>What happens when young people narrativize their experiences for a poetry slam?</li>
+  <li>How do we re-member the youth poetry slam?</li>
+  <li>What kinds of critical Hip Hop literacies are practiced in the youth poetry slam?</li>
+</ol>
 
 <p>One significant question I asked participants during semi-structured interviews was “<strong>what do these experiences <em>sound</em> like to you?</strong>” This question became an invitation into multimodal meaning-making through collaborative composition, sonic memory work, and critical reflection.</p>
 
