--- a/recife.html
+++ b/recife.html
@@ -196,7 +196,7 @@ My curiosity never stop.
 
 <p class="center-text"><<em>conscientização</em> – Portuguese, meaning <em>critical consciousness</em></p>
 
-<p>When I first read <em>Pedagogy of the Oppressed</em> (1970), it changed me. Paulo Freire’s words gave me a language to name the world I was witnessing—systemic racism, settler colonialism, hyper-capitalism – and what bell hooks calls imperialist white-supremacist capitalist patriarchy. Freire helped me see how oppression dehumanizes everyone, including those who benefit from it. That insight called me more deeply into the work of liberation: as a teacher, poet, and educational researcher. It also affirmed a truth I was just beginning to understand—that education is inherently political and deeply connected to our “ontological vocation to be more fully human” (p. 70).</p>
+<p>When I first read <em>Pedagogy of the Oppressed</em> (1970), it changed me. Paulo Freire’s words gave me a language to name the world I was witnessing&mdash;systemic racism, settler colonialism, hyper-capitalism&mdash; and what bell hooks calls imperialist white-supremacist capitalist patriarchy. Freire helped me see how oppression dehumanizes everyone, including those who benefit from it. That insight called me more deeply into the work of liberation: as a teacher, poet, and educational researcher. It also affirmed a truth I was just beginning to understand—that education is inherently political and deeply connected to our “ontological vocation to be more fully human” (p. 70).</p>
 
 <p>Freire’s concept of <em>radical love</em>, rooted in Catholic liberation theology (Gutiérrez, 1973), became a pedagogical ethos for me. With that grounding, I felt compelled to sample critical pedagogy, and remix it through the aesthetics and sensibilities of Hip Hop, a culture that influenced so much of my life as I grew up outside New York City. I didn’t arrive at Freire through my academic journey as a graduate student. I came to critical pedagogy through Hip Hop. My first encounter with Freire was at Hip Hop in the Heartland, a summer teacher conference in Wisconsin, where a theater educator facilitated a <em>Theater of the Oppressed</em> (Boal, 1979) workshop. That experience inspired me to read as many critical theorists as possible, including scholars and public intellectuals like Henry Giroux, Peter McLaren, Shirley Steinberg, Ana Cruz, and Joe Kincheloe – all of whom are sampled here. These scholars helped shape my identity as a public-school teacher committed to education as a form of liberation.</p>
 
@@ -206,7 +206,7 @@ My curiosity never stop.
 
 <p>The music draws on a Brazilian palette of sounds and textures as a way to honor Freire’s homeland. I made the beat using samba-influenced percussion and a lead melody sampled from a cavaquinho–a small, four-string instrument originating in Portugal. The hook features chopped up vocals from a Brazilian folksinger, reconfigured into a new musical sentence. These aesthetic choices are part of an intentional sonic methodology, a transnational homage, and an affirmation of Hip Hop’s Afro-diasporic lineage.</p>
 
-<p class="center-text">The production itself was a praxis for me—<br>
+<p class="center-text">The production itself was a praxis for me&mdash;<br>
 a praxis of critical music production /<br>
 a sonic Hip Hop praxis /<br>
 reminding me always to...</p>
