--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@ function hideTranscriptFromInner() {
 }
 </script>
 
-    <p><strong>Welcome to WAVEFORMS</strong><p>
+    <h2>Welcome to WAVEFORMS</h2>
 
     <p>This webtext mixtape is adapted from my dissertation study on Hip Hop and spoken word poetry in K–12 classrooms. It features sounds that hold deep personal meaning, including the voices of four student-poets who are now young adults. Together we “sample” personal and educational experiences while reflecting on the Hip Hop and spoken word learning community that we co-constructed when I was their high school English teacher. In this study, we re-membered those experiences as we explored the youth poetry slam through sound. Together we show how youth-centered art spaces can help us read and write the <em>word</em> and the <em>world</em> (Freire &amp; Macedo, 1987), re-member the past (Dillard, 2008; 2011), and imagine new ways of <em>becoming</em> in a world that is not yet (Greene, 1977).</p>
 
@@ -123,7 +123,7 @@ function hideTranscriptFromInner() {
   <figcaption>Figure 1: Session View in Ableton Live showing thematically color-coded clips representing audio excerpts from interviews, focus groups, and participant poems used in the composition process.</figcaption>
 </figure>
 
-<p><strong>Recordings as Waveforms</strong><p>
+<h2>Recordings as Waveforms</h2>
 
     <p>The title <strong>WAVEFORMS</strong> refers to the visual representation of sound (see Figure 2), symbolized by the lines you see when working inside a DAW like Ableton Live. These lines represent amplitude over time, revealing the loudness, rhythm, and dynamics of a recording. Every voice in this project&mdash;every laugh, breath, pause, or verse&mdash;was recorded as a waveform.</p>
 
@@ -140,7 +140,7 @@ function hideTranscriptFromInner() {
 
     <p>In a recent text message exchange with multimedia scholar Emery Petchauer, we discussed the limits and possibilities of form and representation. He pointed me back to a conversation between him and Ruth Nicole Brown on their <a href="https://formsoffreedom.com/With-Reverence" target="_blank">Forms of Freedom website</a> (Petchauer &amp; Brown, 2022), where form is understood not as fixed, but in terms of dynamic possibility. In an audio essay for <em>Seismograf Peer</em>, Petchauer and Brown (2023) offered “borderless multiphonic vignettes” that refuse “representation and discursive explanation” as a deliberate, anticolonial method (p. 1). I was drawn to their refusal of representation as a singular mode of knowing. Instead, they lean into collisions of sounds, voices, and forms that transgress semantic and rhetorical permanence, almost nearing the edge of collapse. Their work parallels the participatory compositional processes used to co-produce the songs on this mixtape. In this webtext, form is not fixed, but emergent. These <span style="white-space: nowrap;">sonic epistemologies shaped my approach to research and composition as embodied, entangled, and polyphonic.</span></p>
 
-<p><strong>The Sounds of Our Inquiry</strong></p>
+<h2>The Sounds of Our Inquiry</h2>
 
 <p>These are the research questions that framed my dissertation study:</p>
 
@@ -152,11 +152,11 @@ function hideTranscriptFromInner() {
 
 <p>One significant question I asked participants during semi-structured interviews was “<strong>what do these experiences <em>sound</em> like to you?</strong>” This question became an invitation into multimodal meaning-making through collaborative composition, sonic memory work, and critical reflection.</p>
 
-<p><strong>What to Expect</strong></p>
+<h2>What to Expect</h2>
 
 <p>What follows are ten original music and spoken word compositions. The tracks are divided into five sections: Intro, Theoretical Conversations, Remixed Methods, Praisesongs, and Outro. Each section includes audio, transcribed lyrics, and liner notes. The liner notes are similar to what’s included on the sleeve of a vinyl album or inside a CD booklet. These notes enabled me to discuss each track, provide context, and explain findings. The compositions that follow represent data in the form of spoken word praisesongs (Mooney, 2024), composed from semi-structured interviews, focus groups, and archival spoken word recordings. Cynthia Dillard (2011) asked “how might our memories, our encounters and representations of those, act as praisesongs in the world?” (p. 234). Praisesongs are found in most religious traditions, and unlike hymns, they are a form of prayer in which the words and music are inseparable. As you move through the webtext, you’ll encounter original beats, poetry, and youth voices remixed into conversation with scholars, writers, MCs, and multimedia artists.</p> 
 
-<p><strong>Some Guidance on How to Read, Listen & Engage</strong></p>
+<h2>Some Guidance on How to Read, Listen & Engage</h2>
 
 <p>Some pages include one track, while others provide a dropdown menu for multiple tracks within that category. You can read the transcribed lyrics as you listen by clicking on 
  <strong><span style="color: #431a50;">Show Transcript</span></strong>. This triggers a scrollable text box with lyrics embedded on the page. This is ideal for reading along while you listen. Alternatively, you can click on <strong><span style="color: #431a50;">Accessible Plain Text Transcript</span></strong>, which opens a new page with text only. As you listen, you can scroll or rewind. You can pause. You can move within, between, and through. There is no single linear path through the webtext&mdash;no prescriptive order that dictates how you engage with the compositions. In this way, the webtext acknowledges a turn from linearity to modularity. WAVEFORMS is a digital exhibit that you are invited to curate as a participant-visitor to this site.</p>  
