--- a/index.html
+++ b/index.html
@@ -163,6 +163,20 @@ function hideTranscriptFromInner() {
 
 <p><em>Each track of the mixtape is embedded on its respective menu page. For an audio-only listening experience, the audio compositions are assembled as a playlist on Soundcloud below.</em></p> 
 
+<h2>Accessibility Statement</h2>
+
+<p>This webtext was designed with accessibility and an inclusive user experience as a priority. I have made the following intentional choices to support readers and users engaging with this work:</p>
+
+<ul>
+  <li>All pages include <code>lang=\"en\"</code> and <code>charset=\"utf-8\"</code> declarations in the HTML head to support screen reader compatibility and proper character rendering.</li>
+  <li>Proper semantic HTML structure is used throughout the webtext, including headings (<code>&lt;h1&gt;</code>, <code>&lt;h2&gt;</code>), paragraphs (<code>&lt;p&gt;</code>), lists (<code>&lt;ul&gt;</code>, <code>&lt;ol&gt;</code>), and figure captions (<code>&lt;figcaption&gt;</code>) to ensure logical reading order and navigability for assistive technologies.</li>
+  <li>Alternative text (<code>alt</code> attributes) is provided for all images. When <code>figcaption</code> fully describes the image, <code>alt=\"\"</code> is used to avoid redundancy for screen reader users.</li>
+  <li>Text and background colors have been selected and tested to meet or exceed color contrast requirements.</li>
+  <li>Audio content is accompanied by accessible transcripts, and care has been taken to minimize navigation interference for assistive technology users.</li>
+</ul>
+
+<p>Every effort has been made to design this webtext as an accessible multimodal composition. I always welcome feedback on improving accessibility and encourage readers to share suggestions so that authors may continue to enhance the inclusivity of their work.</p>
+
 <iframe class="responsive-iframe" height="450" allow="autoplay"
   title="Audio playlist for entire mixtape"
   src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/2026819329&color=%23431a50&auto_play=false&hide_related=true&show_comments=false&show_user=false&show_reposts=false&show_teaser=false">
