--- a/realm-of-entities.html
+++ b/realm-of-entities.html
@@ -202,8 +202,34 @@ Music fades
 
 </div>
 
-    <p>Coming soon: Content for this page will explore the concept of entities as part of remixed methods in waveform pedagogy.</p>
- 
+<h2>Realm of Entities: Remixing Literacies, Poetics, &amp; Pedagogies</h2>
+
+<p>This track explores what it means to <em>do</em> research sonically, poetically, and multimodally. It lives at the intersection of remix studies, sound studies, poetic inquiry, and arts-based research&mdash;sampling not just content but process, form, and frame. I made this beat using the voices of scholars like Gunther Kress (2000, 2010) and Paul D. Miller aka DJ Spooky (2004, 2008), braiding their ideas into a soundscape that spans multiple modes, including music, poetry, film, and visual art. My goal was to create a sonic narrative that doesn’t just describe multimodal research, but performs it. Inspired by scholar-artists like Nick Sousanis (2015), whose graphic novel dissertation challenged the limits of academic form, I wanted to <em>draw</em> with sound to create a sonic bricolage, a mosaic that is stitched together with fragments of media.</p>
+
+<h2>Methods of Multimodality</h2>
+
+<p>Listening through hours of interviews, lectures, and panel discussions, I began archiving samples about multimodality. One repeating sample is sourced from Kirby Ferguson’s <em>Everything Is a Remix</em> (2010), a web-based documentary that argued all creativity is derivative. We copy, transform, and combine. I interpreted this not as a limitation, but as a call to rethink methodology through the lens of remix. Remix isn’t just an aesthetic. It’s a way of knowing that challenges ideas of originality, homage, ownership, and creation. These insights led me to discover <em>Imaginary Landscape No. 1</em> (1939) by John Cage. For the main instrumental riff in this track, I sampled directly from Cage’s groundbreaking experimental composition&mdash;a chaotic mix of variable-speed phono turntables, frequency recordings, muted piano, radios, and various forms of percussion. I was intrigued by his use of chance, recombination, and indeterminacy&mdash;three principles that began to shape my composition process. As the project evolved, I found myself releasing control over aspects of each composition by letting the computer produce random and unanticipated sounds, textures, and rhythms. The result was a production that was neither human nor computer, neither digital nor analog, but somewhere in the liminal space between.</p>
+
+<h2>Sampling the Archive</h2>
+
+<p>Multimedia artist Paul D. Miller&mdash;better known as DJ Spooky&mdash;features in this track discussing remix as a democratizing practice. His work pushes the boundaries of what research can sound like. Miller, along with dozens of others in <em>The Routledge Handbook of Remix Studies and Digital Humanities</em> (Navas et al., 2021), invited me to rethink the archive, authorship, and originality. From cinema to AI, pedagogy to VR, remix studies insists that knowledge is not fixed&mdash;it is performed, revised, and continuously re-rendered. These scholars argue that knowledge is design-dependent, which means the form or medium through which we do research is fundamentally connected to the content within its frame. Sampling, especially in Hip Hop, emerges from a space between legality and illegality, citation and theft. In some respects, our copyright laws haven’t caught up to these innovative practices. And I would argue that neither have our research paradigms.</p>
+
+<p>Another source sampled here is <em>Global Groove</em> (Paik &amp; Godfrey, 1973)&mdash;a psychedelic film collage of sound, image, and movement. It reads like someone is late-night channel surfing in a dream state. It’s glitchy, rhythmic, overwhelming, and nonsensical. I sampled the line “open your eyes” not just as a motif that echoes Maxine Greene’s (1977) concept of wide-awakeness, to resist the mundane, but as a challenge to <em>see</em> multimodal scholarship from new aesthetic vantage points.</p>
+
+<h2>What Does It Really Mean to Listen?</h2>
+
+<p>For this composition, I drew heavily from the field of sound studies (Pinch &amp; Bijsterveld, 2004, 2012; Sterne, 2012) and Michel Chion’s (1994) three listening modes: causal (what made the sound?), semantic (what does it mean?), and reduced (what does it sound like?). The third mode&mdash;reduced listening&mdash;is closely linked to my interview question: <em>what do these experiences sound like to you?</em> Reduced listening asks us to listen to the sound <em>itself</em>. As literacy educators, we mostly teach the first two modes of listening. But what happens when we ask students to listen deeply, not just for information or meaning, but for frequency, rhythm, or resonance? This track is an invitation to reimagine sound as inquiry into the sonic aesthetics of the text itself.</p>
+
+<p>As a high school English teacher, I often wondered how to create a “culture of listening and valuing words” (Fisher, 2005, 2007) with students who refused to be silent, asserting their place in a world that often ignores or distorts their voices. In this webtext, I treat listening not just as a sensory activity, but as a research methodology&mdash;a way of intentionally engaging with the world by attuning to vibration, disruption, silence, repetition, and rupture. Michel Chion’s (1994) reduced listening mode, asks us to listen not only for <em>what is said</em>, but for <em>how it sounds</em>, <em>where it emerges</em>, and <em>what it disrupts</em>. This mode of listening refuses to relegate language to the page. It asks us to hear the sounds of language as three-dimensional waveforms that move through time and space.</p>
+
+<p>In schools, listening is often framed as compliance: <em>pay attention, follow directions, respect the speaker.</em> But what if we reframed listening as a critical, aesthetic, and embodied scholarly practice? What if we taught students to analyze a pause, a pitch shift, a clipped breath&mdash;just as closely as we teach them to analyze a metaphor? These questions resonate with the pedagogical vision articulated in <em>Sonic Literacy: Using Sound to Teach High School Reading and Writing</em> (Hashem &amp; Mooney, 2024), which centers sound not as a supplement to print, but as a primary mode of meaning-making in secondary classrooms. Their work emphasizes how sonic composition cultivates rhetorical awareness, creative agency, and culturally sustaining practices, shared values that characterize the sonic literacies at work in <em>WAVEFORMS</em>.</p>
+
+<p><em>To listen is to risk being changed by what we hear.<br>
+To sample is to participate in a lineage of discourse.<br>
+To remix is to say: I heard that, flipped it, and made something new.</em></p>
+
+<p>In this realm of entities, research is not what we extract. It’s what we make together.</p>
+
   <div class="track-nav">
   <a href="long-as-i-live.html">
   <img src="media/images/previous-button.svg" alt="Previous Track" class="track-image-button">
