--- a/realm-of-entities.html
+++ b/realm-of-entities.html
@@ -202,7 +202,7 @@ Music fades
 
 </div>
 
-<h2>Realm of Entities: Remixing Literacies, Poetics, &amp; Pedagogies</h2>
+<h2>Remixing Literacies, Poetics, &amp; Pedagogies</h2>
 
 <p>This track explores what it means to <em>do</em> research sonically, poetically, and multimodally. It lives at the intersection of remix studies, sound studies, poetic inquiry, and arts-based research&mdash;sampling not just content but process, form, and frame. I made this beat using the voices of scholars like Gunther Kress (2000, 2010) and Paul D. Miller aka DJ Spooky (2004, 2008), braiding their ideas into a soundscape that spans multiple modes, including music, poetry, film, and visual art. My goal was to create a sonic narrative that doesn’t just describe multimodal research, but performs it. Inspired by scholar-artists like Nick Sousanis (2015), whose graphic novel dissertation challenged the limits of academic form, I wanted to <em>draw</em> with sound to create a sonic bricolage, a mosaic that is stitched together with fragments of media.</p>
 
